--- a/style.scss
+++ b/style.scss
@@ -292,7 +292,7 @@ body {
     }
 }
 
-@media all and (orientation: landscape) {
+@media all and (orientation: landscape) and (max-height: 768px) {
     html,
     body {
         font-size: 0.9em;
